--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <div class="container">
       <h2>Our Services</h2>
       <div class="feature">
-        <img src="service-icon1.png" alt="Service 1">
+        <img src="https://placehold.co/600x400" alt="Service 1">
         <h3>Service 1</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="feature">
-        <img src="service-icon2.png" alt="Service 2">
+        <img src="https://placehold.co/600x400" alt="Service 2">
         <h3>Service 2</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="feature">
-        <img src="service-icon3.png" alt="Service 3">
+        <img src="https://placehold.co/600x400g" alt="Service 3">
         <h3>Service 3</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
